--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,10 @@
   width: 250px;
   border-top: 2px solid  rgba(0, 38, 255, 0.664);
 }
+
+/*
+.container-border {
+  border: 2px dashed grey;
+  border-radius: 10%;
+}
+*/
