--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,15 @@
   border-top: 2px solid  rgba(0, 38, 255, 0.664);
 }
 
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
+
 /*
 .container-border {
   border: 2px dashed grey;
